# py-logic

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  code_of_conduct.md  pyproject.toml
.github/workflows/: build.yaml  lint.yaml
examples/: colorable.py  criminal.py
pylogic/: common_defs.py  fol.py  propositional.py
tests/: test_fol.py  test_prepositional.py  test_propositional.py
