[project]
name = "python-logic"
version = "0.0.1"
authors = [
  { name="Diego Palma", email="dpalmasan@gmail.com" },
]
description = "A package to run logic inferences on python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dpalmasan/py-logic"
Issues = "https://github.com/dpalmasan/py-logic/issues"


[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "if _typing.TYPE_CHECKING:", "@overload" ]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov-fail-under=80", "--cov-report=xml", "--cov=.", "-ra", "-v"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39}

[testenv]
setenv = PYTHONPATH = {toxinidir}
skip_install = True
deps =
    -r{toxinidir}/requirements-test.txt
commands =
    pip install -e .
    pytest
"""

[build-system]
requires = ["setuptools>=45.0", "setuptools_scm[toml]>=6.3.1", "wheel"]
build-backend = "setuptools.build_meta"
